# launchy

./: .gitignore  .travis.yml  BUILD.txt  Makefile  README.md  Readme.doc  build.cmd  build.sh  changelog  readme.txt
LaunchyC/: Launchy.sln  Readme.doc
LaunchyC/Installer/: Installer.sln
LaunchyC/Launchy/: ExeLauncher.cpp  ExeLauncher.h  FileRecord.cpp  FileRecord.h  Launchy.aps  Launchy.cpp  Launchy.rc  Launchy.vcproj  LaunchyDir.h  LaunchyDlg.cpp  LaunchyDlg.h  LaunchySmarts.cpp  LaunchySmarts.h  Notes.txt  Options.cpp  Options.h  Skin.h  SmartComboBox.cpp  SmartComboBox.h  TypeEdit.cpp  iniFile.cpp  resource.h  stdafx.h
LaunchyC/Launchy Installer/: Launchy Installer.sln
Launchy_QT/: BUILD.txt  INSTALL.txt  Launchy.pro  Makefile  Readme.doc  makefile  readme.txt
Launchy_QT/Plugin API/: api.html
Launchy_QT/common/: DropTableWidget.h  FileBrowserDelegate.cpp
Launchy_QT/linux/: build.sh  build_deb.sh
Launchy_QT/mac/: Launchy.dmg.bz2  deploy
Launchy_QT/src/: AnimationLabel.cpp  AnimationLabel.h  CharLineEdit.cpp  CharLineEdit.h  CharListWidget.cpp  CharListWidget.h  CommandHistory.cpp  Directory.h  Fader.cpp  Fader.h  FileSearch.cpp  InputDataList.cpp  Launchy.vcxproj  LineEditMenu.h  SettingsManager.cpp  catalog.cpp  catalog.h  catalog_builder.cpp  catalog_builder.h  catalog_types.cpp  catalog_types.h  globals.cpp  globals.h  icon_delegate.cpp  icon_delegate.h  icon_extractor.cpp  launchy.qrc  main.cpp  main.cpp2.cpp  main.h  options.cpp  options.h  options.ui  platform_base.h  platform_base_hotkey.cpp  platform_base_hotkey.h  platform_base_hottrigger.h  platform_util.cpp  platform_util.h  platform_win.cpp  (+12 more)
Launchy_QT/translations/: launchy_de.ts  launchy_es.ts  launchy_fr.qm  launchy_fr.ts  launchy_ja.ts  launchy_nl.ts  launchy_rus.ts  launchy_zh.ts  launchy_zh_TW.ts
Launchy_QT/win/: Launchy.sln  Launchy.vcproj
Launchy_VC7/: AdvancedOptions.h  AlphaBorder.cpp  AlphaBorder.h  CArchiveEx.cpp  CArchiveEx.h  CDialogSK.cpp  CDialogSK.h  DirectoryChooser.cpp  DirectoryChooser.h  DiskObject.cpp  ExeLauncher.cpp  FileRecord.cpp  FileRecord.h  HotkeyDialog.cpp  Launcher.h  Launchy.aps  Launchy.cpp  Launchy.h  Launchy.ncb  Launchy.rc  Launchy.sln  Launchy.vcproj  LaunchyDlg.cpp  LaunchyDlg.h  LaunchySmarts.cpp  LaunchySmarts.h  OpaqueListBox.cpp  Options.cpp  Options.h  Plugin.cpp  Plugin.h  QArray.h  ReadMe.txt  ReadOnlyEdit.cpp  ReadOnlyEdit.h  Readme.doc  Resource.h  Skin.cpp  Skin.h  SkinChooser.cpp  (+10 more)
Launchy_VC7/Installer/: Installer.vdproj
Launchy_VC7/Launchy Plugin API/: index.html
Launchy_VC7/boost/: shared_array.hpp  throw_exception.hpp
Plugin API/: PluginPage.doc
launchy/: Form1.cs  Launchy.XML  Options.cs
linux/: launchy.desktop
src/: CMakeLists.txt  FileSearch.cpp  Launchy.pro  SettingsManager.h  buildWinSln.bat  catalog.cpp  catalog_builder.cpp  catalog_builder.h  catalog_types.cpp  catalog_types.h  global.pri  globals.cpp  globals.h  icon_delegate.cpp  icon_delegate.h  icon_extractor.cpp  launchy.sln  main.cpp  main.h  options.h  platform_base.h  platform_base_hottrigger.h  platform_util.cpp  plugin_handler.h  plugin_interface.cpp  plugin_interface.h  precompiled.h  src.pro  version.h.in
src/common/: CMakeLists.txt  DropListWidget.cpp  FileBrowser.cpp  FileBrowser.h  catalog.cpp  catalog.h  common.pro  directory.h  globals.cpp  globals.h  globalshortcutmanager.cpp  globalshortcutmanager.h  globalshortcuttrigger.h  launchy.common.vcxproj  mac.cpp  mac_keytrigger.cpp  mac_keytrigger.h  mac_platform.cpp  mac_platform.h  platform_base.cpp  platform_base.h  settingsmanager.cpp  settingsmanager.h  version.h.in  win.cpp  win_Iconprovider.cpp  win_files.h  win_keytrigger.cpp  win_minidump.cpp  win_minidump.h  win_platform.cpp  win_platform.h  win_util.cpp  win_util.h  x11.cpp  x11_iconprovider.cpp  x11_iconprovider.h  x11_keytrigger.cpp  x11_keytrigger.h  x11_platform.cpp  (+1 more)
src/launchy/: AnimationLabel.cpp  CMakeLists.txt  CharListWidget.cpp  CharListWidget.h  CommandHistory.cpp  CommandHistory.h  Fader.cpp  Fader.h  FileSearch.cpp  FileSearch.h  InputDataList.cpp  InputDataList.h  Launchy.vcxproj  LineEditMenu.h  SettingsManager.cpp  catalog_builder.cpp  catalog_types.cpp  catalog_types.h  commandlineparser.cpp  commandlineparser.h  globals.h  icon_delegate.cpp  icon_extractor.cpp  icon_extractor.h  launchy.pro  launchywidget.cpp  launchywidget.h  main.cpp  main.h  options.ui  optionsdialog.cpp  optionsdialog.h  platform_base.h  platform_base_hottrigger.h  plugin_handler.cpp  plugin_handler.h  plugin_interface.cpp  plugin_interface.h  singleapplication.cpp  singleapplication.h  (+3 more)
src/launchy.specs/: CMakeLists.txt  commandlineparser.specs.cpp  commandlineparser.specs.h  launchy.specs.pro  launchy.specs.vcxproj  main.cpp  singleapplication.specs.cpp  singleapplication.specs.h
src/libqxt/: CMakeLists.txt  libqxt.pro  qxtglobalshortcut_x11.cpp
src/plugins/: CMakeLists.txt  plugins.pri
src/plugins/calcy/: calcy.h  calcy.pro  gui.h  precompiled.h
src/plugins/controly/: CMakeLists.txt  ControlPanelItemFinder.cpp  ControlPanelItemFinder.h  controly.cpp  controly.h  controly.pro  controly.vcxproj  gui.cpp
src/plugins/gcalc/: gcalc.pro
src/plugins/runner/: CMakeLists.txt  dlg.ui  gui.cpp  gui.h  runner.cpp  runner.h  runner.pro  runner.vcxproj  winfiles.h
src/plugins/verby/: CMakeLists.txt  Verby.cpp  verby.pro  verby.vcxproj
src/plugins/weby/: CMakeLists.txt  dlg.ui  weby.cpp  weby.h  weby.pro  weby.vcxproj  winfiles.h
src/win/: launchy.rc.in
translations/: common_de.ts  common_es.ts  common_fr.ts  common_ja.ts  common_nl.ts  common_rus.ts  common_zh.ts  common_zh_TW.ts  controly_de.ts  controly_es.ts  controly_fr.ts  controly_ja.ts  controly_nl.ts  controly_rus.ts  controly_zh.ts  controly_zh_TW.ts  launchy_de.ts  launchy_es.ts  launchy_fr.ts  launchy_ja.ts  launchy_nl.ts  launchy_rus.ts  launchy_zh.ts  launchy_zh_TW.ts  runner_de.ts  runner_es.ts  runner_fr.ts  runner_ja.ts  runner_nl.ts  runner_rus.ts  runner_zh.ts  runner_zh_TW.ts  verby_de.ts  verby_es.ts  verby_fr.ts  verby_ja.ts  verby_nl.ts  verby_rus.ts  verby_zh.ts  verby_zh_TW.ts  (+8 more)
(+828 files in other folders)
